fixes #13 StartChooser: Version check